Add rename pop for extract to method code action